k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redirect-deployment
  labels:
    app: redirect-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redirect-deployment
  template:
    metadata:
      labels:
        app: redirect-deployment
    spec:
      containers:
        - name: redirect-deployment
          image: sweptwings/url-shortner_redirect-service:e82e287
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service

metadata:
  name: redirect-node-service

spec:
  type: NodePort
  selector:
    app: redirect-deployment

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: app-group
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health-check
    alb.ingress.kubernetes.io/group.order: '2'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-node-service
                port:
                  number: 80
